demo-oauth2/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-demo-oauth2
  namespace: keycloak
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`demo-oauth2.dhub.test.cloud.kadaster.nl`)
      kind: Rule
      services:
        - name: demo-oauth2
          port: 8090
